Icon spacing fix

--- a/app/assets/css/app.scss
+++ b/app/assets/css/app.scss
@@ -5321,6 +5321,7 @@ body.sorting ul.collapsedSortTarget {
 						display: grid;
 						grid-template-columns: 20px auto;
 						align-content: center;
+						gap: 4px;
 						width: 100%;
 						height: 100%;
 
